--- a/my_malloc/Makefile
+++ b/my_malloc/Makefile
@@ -3,12 +3,13 @@ CFLAGS=-O3 -fPIC
 DEPS=my_malloc.h
 
 all: lib
+lib: libmymalloc.so
 
-lib: my_malloc.o
-	$(CC) $(CFLAGS) -shared -o libmymalloc.so my_malloc.o
+libmymalloc.so: my_malloc.o
+	$(CC) $(CFLAGS) -shared -o $@ $< -g
 
 %.o: %.c my_malloc.h
-	$(CC) $(CFLAGS) -c -o $@ $< 
+	$(CC) $(CFLAGS) -c -o $@ $< -g
 
 clean:
 	rm -f *~ *.o *.so
