--- a/hot_potato/Makefile
+++ b/hot_potato/Makefile
@@ -1,12 +1,19 @@
-TARGETS=client server
+TARGETS=client ringmaster function
+CFLAGS=-std=gnu++11 -pedantic -Wall -Werror -ggdb3
 
 all: $(TARGETS)
-clean:
-	rm -f $(TARGETS)
 
 client: client.cpp
-	g++ -g -o $@ $<
+	g++ -g -o $@ $^
 
-server: server.cpp
-	g++ -g -o $@ $<
+ringmaster: ringmaster.o function.o
+	g++ -o $@ $^
 
+ringmaster.o: ringmaster.cpp function.h
+	g++ $(CFLAGS) -c  $<
+
+function.o: function.cpp function.h
+	g++ $(CFLAGS) -c  $<
+
+clean:
+	rm -f $(TARGETS)
