--- a/hot_potato/Makefile
+++ b/hot_potato/Makefile
@@ -1,22 +1,22 @@
-TARGETS=player ringmaster function
+TARGETS=player ringmaster potato
 CFLAGS=-std=gnu++11 -pedantic -Wall -Werror -ggdb3
 
 all: $(TARGETS)
 
-player: player.o function.o
+player: player.o potato.o
 	g++ -o $@ $^
 
-player.o: player.cpp function.h
+player.o: player.cpp potato.h
 	g++ $(CFLAGS) -c  $<
 
-ringmaster: ringmaster.o function.o
+ringmaster: ringmaster.o potato.o
 	g++ -o $@ $^
 
-ringmaster.o: ringmaster.cpp function.h
+ringmaster.o: ringmaster.cpp potato.h
 	g++ $(CFLAGS) -c  $<
 
-function.o: function.cpp function.h
+potato.o: potato.cpp potato.h
 	g++ $(CFLAGS) -c  $<
 
 clean:
-	rm -f $(TARGETS)
+	rm -f $(TARGETS) *.o *~
